deployments/pathweb/workloads/home-network/zigbee2mqtt/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: home-network
spec:
  selector: {}
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      priorityClassName: rfhome-home-critical
      nodeSelector:
        location: rfhome
        kubernetes.io/hostname: pathweb-worker-3 # The node where the Zigbee adapter is attached to
      containers:
      - name: zigbee2mqtt
        image: koenkk/zigbee2mqtt:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
        resources:
          requests:
            squat.ai/serial-tty-s1: '1'
          limits:
            squat.ai/serial-tty-s1: '1'
      livenessProbe:
        failureThreshold: 30
        httpGet:
          path: /
          port: web
        timeoutSeconds: 10
        periodSeconds: 10
      startupProbe:
        failureThreshold: 30
        httpGet:
          path: /
          port: web
        timeoutSeconds: 10
        periodSeconds: 10
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee2mqtt-data
