deployments/pathweb/workloads/home-network/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: home-network
spec:
  selector: {}
  ports:
  - port: 80
    name: http
    targetPort: http
