deployments/pathweb/workloads/home-network/zigbee2mqtt/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/name: zigbee2mqtt
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - z2m.services.home.yrf.me
  rules:
  - backendRefs:
    - name: zigbee2mqtt
      port: 80
